--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,7 +46,7 @@
       <footer>
         {% if site.github.is_project_page %}
         <p>This project is maintained by <a href="https://erhezi.github.io/#projects">{{ site.github.owner_name }}</a></p>
-        <p>Back to Erhezi's Home Page <<a href="https://erhezi.github.io"></a?></p>
+        <p><small>Back to Erhezi's Home Page<a href="https://erhezi.github.io"></a></small></p>
         {% endif %}
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
