--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,7 +45,7 @@
       </section>
       <footer>
         {% if site.github.is_project_page %}
-        <p>This project is maintained by <a href="https://erhezi.github.io/#projects">{{ site.github.owner_name }}</a></p>
+        <p><small>Back to <a href="https://erhezi.github.io/#projects">Projects</a><small></p>
         <p><small>Back to <a href="https://erhezi.github.io">Erhezi's Home Page</a></small></p>
         {% endif %}
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
